feat: adding few tasks

--- a/index.html
+++ b/index.html
@@ -26,11 +26,7 @@
           implement the database for the local leisure centre. Use the entities
           and their attributes provided to create the respective tables. In
           addition, the leisure centre has now decided that they want two
-          databases. A database implemented using SQL and a second NoSQL
-          database, preferably using MySQL workbench and MongoDB respectively.
-          It is the view that once the databases are successfully implemented,
-          the leisure centre would then decide which of the databases they would
-          possibly integrate with a front-end Python application.
+          databases. A database implemented using SQL.
         </p>
       </div>
       <div></div>
@@ -189,6 +185,21 @@
          To identify the members who get lessonID more than 1002
         </p>
         <img src="/Database-Project/assets/table8.png" width="800">
+     </div>
+     <div>
+        <ol start="9">
+          <li>
+            <p>
+              Triggers.
+            </p>
+          </li>
+        </ol>
+      </div>
+      <div>
+        <p>
+        Write a trigger that will be fired whenever a new member gets added in the members table. 
+        </p>
+        <img src="/Database-Project/assets/table9.png" width="800">
      </div>
     </div>
     <div></div>
