feat: added joins

--- a/index.html
+++ b/index.html
@@ -202,6 +202,21 @@
         <img src="/Database-Project/assets/table9.png" width="800">
      </div>
     </div>
-    <div></div>
+    <div>
+        <ol start="10">
+          <li>
+            <p>
+              Joins.
+            </p>
+          </li>
+        </ol>
+      </div>
+      <div>
+        <p>
+         Combine rows from two or more tables, based on a related column between them. 
+        </p>
+        <img src="/Database-Project/assets/table10.png" width="800">
+     </div>
+    </div>
   </body>
 </html>
